=head2 not =head1

--- a/README
+++ b/README
@@ -35,13 +35,13 @@ DESCRIPTION
     Diff::LibXDiff is a binding of LibXDiff
     (<http://www.xmailserver.org/xdiff-lib.html>) to Perl via XS
 
-    LibXDiff is the basis of the diff-engine for git
+    LibXDiff is the basis of the diff engine for git
 
     Currently only the "diff" method is supported, and that only with text
     diffing. More coming soon.
 
 METHODS
-$diff = Diff::LibXDiff->diff( $string1, $string2 )
+  $diff = Diff::LibXDiff->diff( $string1, $string2 )
     Calculate the textual diff of $string1 and $string2 and return the
     result as a string
 
